Heroku asset precompile error

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,10 @@ default: &default
 #   pool: 5
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  adapter: postgresql
+  host: localhost
+  username: user
+  database: chime-dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
